Пофикси ошибки при прошлом окммите (неправильно собирался .jar файл)